--- a/public/bwr-app1.html
+++ b/public/bwr-app1.html
@@ -5,7 +5,7 @@
   </div>
 </div>
 
-<div ng-include="'step1-pt' + vm.data.appStep + '.html'"></div>
+<div ng-include="'partials/bwr-app1/bwr-app1-pt' + vm.data.appStep + '.html'"></div>
 
 <code>
     <pre>
