set up production build

--- a/public/bwr-app2.html
+++ b/public/bwr-app2.html
@@ -1,4 +1,4 @@
-<h1>Quick Test: step 3</h1>
+<h1>Quick Demo: step 3</h1>
 
 <div ng-if="!vm.result">
 	<h3>Please wait a few moments while we process your application...</h3>
