--- a/public/bwr-app1.html
+++ b/public/bwr-app1.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-sm-offset-3 col-sm-9">
-    <h1>Quick Test: step {{ vm.data.appStep }}</h1>
+    <h1>Quick Demo: step {{ vm.data.appStep }}</h1>
     <p><a ng-click="vm.fillStep1()" href>fill form</a></p>
   </div>
 </div>
