set up cb page styles and transition animations

--- a/public/bwr-app1.html
+++ b/public/bwr-app1.html
@@ -7,8 +7,8 @@
 
 <div ng-include="'partials/bwr-app1/bwr-app1-pt' + vm.data.appStep + '.html'"></div>
 
-<code>
+<!-- <code>
     <pre>
       {{ vm.cbl1 | json }}
     </pre>
-</code>
+</code> -->
