add more form fields

--- a/public/bwr-app1.html
+++ b/public/bwr-app1.html
@@ -1,11 +1,10 @@
 <div class="row">
-  <div class="col-sm-offset-3 col-sm-9">
-    <h1>Quick Demo: step {{ vm.data.appStep }}</h1>
-    <p><a ng-click="vm.fillStep1()" href>fill form</a></p>
+  <div class="col-sm-12">
+    <h1>Check your custom rate for a $15,000 loan with 1 click!</h1>
   </div>
 </div>
 
-<div ng-include="'partials/bwr-app1/bwr-app1-pt' + vm.data.appStep + '.html'"></div>
+<div ng-include="'partials/bwr-app1/bwr-app1-pt' + vm.data.appStep + '.html'" class="cb-fade"></div>
 
 <!-- <code>
     <pre>
