--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
 
 	<div class="container">
 		<div class="row">
-			<div id="app-container" class="col-sm-8 col-center" fix-position-absolute>
+			<div id="app-container" class="col-sm-8 col-center">
 
 				<!-- UI-VIEW: pulls in templates with ui-router configured in routes.js -->
 				<div ui-view class="cb-fade"></div>
