--- a/public/bwr-app1.html
+++ b/public/bwr-app1.html
@@ -4,6 +4,11 @@
   </div>
 </div>
 
+<script type="text/ng-template" id="error-messages">
+	<p ng-message="required">This field is required</p>
+	<p ng-message="minlength">This field is too short</p>
+</script>
+
 <div ng-include="'partials/bwr-app1/bwr-app1-pt' + vm.data.appStep + '.html'" class="cb-fade"></div>
 
 <!-- <code>
