--- a/public/bwr-app2.html
+++ b/public/bwr-app2.html
@@ -1,19 +1,61 @@
-<h1>Quick Demo: step 3</h1>
+<!doctype html>
+<html ng-app="app" ng-controller="BwrApp1Ctrl as vm">
+<head>
+    <meta charset="UTF-8">
 
-<div ng-if="!vm.result" class="cb-fade">
-	<h3>Please wait a few moments while we process your application...</h3>
-	<div class="loader center">
-    	<i class="fa fa-icon fa-4x fa-spinner fa-pulse"></i>
-    </div>
-</div>
+    <title>Origination Demo</title>
 
-<div ng-if="vm.result" class="cb-fade">
-    <h3>Congratulations! You qualified for a loan of $5,000 at {{ vm.result }}.</h3>
+    <!-- vendor styles -->
+    <!-- <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"> -->
+    <link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome-animation/0.0.8/font-awesome-animation.min.css" rel="stylesheet">
 
-    <div class="center">
-    	<button class="btn btn-default submit-button"
-    		ng-click="vm.endDemo()">Get Your Loan</button>
-    </div>
-    
-    <!--<rzslider rz-slider-model="vm.cbl1.priceSlider"></rzslider>-->
-</div>
+    <!-- app styles -->
+    <link rel="stylesheet" href="assets/css/current-site/old-style.css" />
+    <link rel="stylesheet" href="assets/css/current-site/pages.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
+</head>
+<body>
+
+    <div ng-include="'partials/layout/header.html'"></div>
+
+    <div class="container">
+        <div class="row">
+            <div id="app-container" class="col-sm-8 col-center">
+
+
+                <div ng-if="!vm.result" class="cb-fade">
+                	<h3>Please wait a few moments while we process your application...</h3>
+                	<div class="loader center">
+                    	<i class="fa fa-icon fa-4x fa-spinner fa-pulse"></i>
+                    </div>
+                </div>
+
+                <div ng-if="vm.result" class="cb-fade">
+                    <h3>Congratulations! You qualified for a loan of $5,000 at {{ vm.result }}.</h3>
+
+                    <div class="center">
+                    	<button class="btn btn-default submit-button"
+                    		ng-click="vm.endDemo()">Get Your Loan</button>
+                    </div>
+                    
+                    <!--<rzslider rz-slider-model="vm.cbl1.priceSlider"></rzslider>-->
+                </div>
+
+
+            </div><!-- /col -->
+        </div><!-- /row -->
+    </div><!-- /container -->
+
+    <div ng-include="'partials/layout/footer.html'"></div>
+
+
+
+
+    <!-- quick solution for preloading font-awesome spinner -->
+    <div id="preload"><i class="fa fa-icon fa-4x fa-spinner fa-pulse"></i></div>
+
+    <!-- the main js bundle created by webpack -->
+    <script src="assets/js/bundle.js"></script>
+</body>
+</html>
